# pi-tickerflow

./: .gitignore  CHANGELOG.md  README.md  VERSIONING.md  fixes.md  install.sh  package.json  proposal-irf-improvements.md  pyproject.toml  research.md  reviewer-subagent-failure-report.md
.tickets/: abc-123.md  pt-1qk7.md  pt-2s2s.md  pt-3rza.md  pt-4dji.md  pt-4hyo.md  pt-4qvw.md  pt-5g48.md  pt-7syc.md  pt-9i1l.md  pt-9sx3.md  pt-bb97.md  pt-c2b0.md  pt-cc9t.md  pt-cj59.md  pt-g2tu.md  pt-hfqc.md  pt-hstd.md  pt-i7hx.md  pt-im9d.md  pt-j485.md  pt-l8za.md  pt-li6a.md  pt-pje2.md  pt-pnli.md  pt-sbvo.md  pt-tpwl.md  pt-uisf.md  pt-ut88.md  pt-whcy.md  pt-yeny.md  pt-zloh.md
agents/: fixer.md  implementer.md  researcher-fetch.md  researcher.md  review-merge.md  reviewer-general.md  reviewer-second-opinion.md  reviewer-spec-audit.md  simplifier.md  simplify-ticket.md
config/: install-manifest.txt  model-aliases.json  settings.json
demo/: __init__.py  __main__.py  hello.py
docs/: SKILL_REFACTORING_SUMMARY.md  architecture.md  commands.md  configuration.md  guardrails.md  migration-to-skills.md  ralph-integration-plan.md  ralph-loop.md  skill-refactoring-plan.md  subagent-simplification.md  ticket_factory_refactoring.md  workflows.md
prompts/: implement-review-fix-close.md  irf-backlog-ls.md  irf-backlog.md  irf-baseline.md  irf-followups.md  irf-from-openspec.md  irf-lite.md  irf-plan-consult.md  irf-plan-review.md  irf-plan-revise.md  irf-plan.md  irf-seed.md  irf-spike.md  irf-sync.md  irf.md  irfc-sync.md  ralph-start.md  tf-backlog.md  tf-dedup.md  tf-lite.md  (+8 more)
(+1177 files in other folders)
