[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-tk-workflow"
dynamic = ["version"]
description = "Ticketflow CLI"
requires-python = ">=3.9"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
tf = "tf_cli.cli:main"

[tool.setuptools]
packages = ["tf_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
    "--cov-fail-under=4",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: fast unit tests with no external dependencies",
    "e2e: end-to-end tests that exercise full workflows",
    "smoke: quick smoke tests to verify basic functionality",
]

[tool.coverage.run]
source = ["tf_cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
precision = 1
fail_under = 25
